# mind-map-graph

./: README.md  main.py  mind_map.py  pyproject.toml  setup.py
mindmap_lib/: __init__.py  mindmap.py
mindmap_lib/core/: __init__.py  config.py  node.py
mindmap_lib/layout/: __init__.py  layout_manager.py  position.py
mindmap_lib/rendering/: __init__.py  color_schemes.py  connection_renderer.py  node_renderer.py
