[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mindmap_lib"
version = "0.1.0"
authors = [
    { name="Tu Nombre", email="tu.email@example.com" },
]
description = "A library for creating mind maps using Python"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
]